Setup home page hero

--- a/src/content/pages/home.mdx
+++ b/src/content/pages/home.mdx
@@ -1,12 +1,13 @@
 ---
 title: thisMarioPerez
 description: Mario Perez - Creative Developer - 🤘
+hero:
+    type: home
+    title: Hi! I'm Mario
 published: true
 ---
 
 <Container inset>
-
-# Hi! I'm Mario
 
 ## fdasfdsa
 
