Update content to adhere to scene schema

--- a/src/content/pages/about.mdx
+++ b/src/content/pages/about.mdx
@@ -1,6 +1,9 @@
 ---
 title: About
 description: About - Mario Perez - Creative Developer - 🤘
+scene:
+    name: about-scene
+    type: logo
 published: true
 ---
 
