--- a/src/content/pages/home.mdx
+++ b/src/content/pages/home.mdx
@@ -1,9 +1,9 @@
 ---
 title: thisMarioPerez
 description: Mario Perez - Creative Developer - 🤘
-hero:
-    type: home
-    title: Hi! I'm Mario
+scene:
+    name: home-scene
+    type: logo
 published: true
 ---
 
