--- a/src/content/projects/fbi-safe-online-surfing.mdx
+++ b/src/content/projects/fbi-safe-online-surfing.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Real-Time Data Visualization Dashboard"
 description: "A web app that allows users to interact with live data streams, offering dynamic visual insights."
+scene:
+    name: fbi-safe-online-surfing-scene
+    type: media
+    src: "/images/image-2.jpg"
 published: true
 ---
 
