--- a/src/content/projects/robin-knows.mdx
+++ b/src/content/projects/robin-knows.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Interactive Learning Platform for Coding"
 description: "A gamified coding platform where users can practice coding in real-time, with step-by-step challenges."
+scene:
+    name: robin-knows-scene
+    type: media
+    src: "/images/image-3.jpg"
 published: true
 ---
 
