--- a/src/content/projects/triptych-co.mdx
+++ b/src/content/projects/triptych-co.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Collaborative Storytelling Platform"
 description: "An interactive platform where users can collaboratively create and edit stories in real-time."
+scene:
+    name: triptych-co-scene
+    type: media
+    src: "/images/image-5.jpg"
 published: true
 ---
 
