Setup scene loading from content schema

--- a/src/content/pages/home.mdx
+++ b/src/content/pages/home.mdx
@@ -1,9 +1,7 @@
 ---
 title: thisMarioPerez
 description: Mario Perez - Creative Developer - 🤘
-scene:
-    name: home-scene
-    type: logo
+scene: logo-scene
 published: true
 ---
 
