--- a/src/content/projects/rodda-construction.mdx
+++ b/src/content/projects/rodda-construction.mdx
@@ -1,10 +1,7 @@
 ---
 title: "3D Virtual Art Gallery"
 description: "A 3D virtual art gallery where users can explore and interact with artwork from various artists."
-scene:
-    name: rodda-construction-scene
-    type: media
-    src: "/images/image-4.jpg"
+scene: rodda-construction-scene
 published: true
 ---
 
