Refactor schema. Consolidate global data into site collection

--- a/src/content/pages/home/index.mdx
+++ b/src/content/pages/home/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: thisMarioPerez
-description: Mario Perez - Creative Developer - 🤘
+title: Home
+slug: home
 scene: logo-scene
 published: true
 ---
 
-<Container inset>
+<Container>
 
 ## fdasfdsa
 
