--- a/src/content/projects/robin-knows.mdx
+++ b/src/content/projects/robin-knows.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Interactive Learning Platform for Coding"
-description: "A gamified coding platform where users can practice coding in real-time, with step-by-step challenges."
+slug: robin-knows
 scene: robin-knows-scene
 published: true
 ---
