--- a/src/content/projects/rodda-construction.mdx
+++ b/src/content/projects/rodda-construction.mdx
@@ -1,6 +1,6 @@
 ---
 title: "3D Virtual Art Gallery"
-description: "A 3D virtual art gallery where users can explore and interact with artwork from various artists."
+slug: rodda-construction
 scene: rodda-construction-scene
 published: true
 ---
