--- a/src/content/projects/triptych-co.mdx
+++ b/src/content/projects/triptych-co.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Collaborative Storytelling Platform"
-description: "An interactive platform where users can collaboratively create and edit stories in real-time."
+slug: triptych-co
 scene: triptych-co-scene
 published: true
 ---
