Test centering content

--- a/src/content/pages/home/index.mdx
+++ b/src/content/pages/home/index.mdx
@@ -5,6 +5,8 @@ scene: logo-scene
 published: true
 ---
 
+<div className="relative size-full -mt-header">
+<div className="flex flex-col size-full justify-center">
 <Container>
 
 ## fdasfdsa
@@ -16,3 +18,5 @@ fdsafdafd
 > blockquote
 
 </Container>
+</div>
+</div>
