--- a/src/content/pages/about/index.mdx
+++ b/src/content/pages/about/index.mdx
@@ -4,8 +4,12 @@ slug: about
 published: true
 ---
 
+<div className="relative size-full -mt-header">
+<div className="flex flex-col size-full justify-center">
 <Container>
 
-# About
+About
 
 </Container>
+</div>
+</div>
