Add to home page content

--- a/src/content/pages/home/index.mdx
+++ b/src/content/pages/home/index.mdx
@@ -8,14 +8,19 @@ published: true
 <div className="relative size-full -mt-header">
 <div className="flex flex-col size-full justify-center">
 <Container>
+<div className="w-full flex flex-col gap-y-4">
 
-## fdasfdsa
+# Hello there!
 
-### fdahjklfdas
+Glad you dropped by!
 
-fdsafdafd
+I'm Mario, a Creative Developer based out of Chattanooga, TN.
 
-> blockquote
+I have a passion for creating exceptional user experiences.
+
+Check out my projects. If you like what you see, drop me a line!
+
+</div>
 
 </Container>
 </div>
