Add text that opens menu

--- a/src/content/pages/home/index.mdx
+++ b/src/content/pages/home/index.mdx
@@ -14,11 +14,9 @@ published: true
 
 Glad you dropped by!
 
-I'm Mario, a Creative Developer based out of Chattanooga, TN.
+I'm Mario, a Creative Developer with a passion for crafting exceptional user experiences.
 
-I have a passion for creating exceptional user experiences.
-
-Check out my projects. If you like what you see, drop me a line!
+If you have sec, check out <OpenMenuButton><span className="underline">my projects</span></OpenMenuButton>. Like what you see? Drop me a line!
 
 </div>
 
