Setup boilerplate for project pages

--- a/src/content/projects/fbi-safe-online-surfing.mdx
+++ b/src/content/projects/fbi-safe-online-surfing.mdx
@@ -1,12 +1,19 @@
 ---
-title: "Real-Time Data Visualization Dashboard"
+title: "FBI Safe Online Surfing"
 slug: fbi-safe-online-surfing
 scene: fbi-safe-online-surfing-scene
 published: true
 ---
 
-# Real-Time Data Visualization Dashboard
+<div className="relative size-full -mt-header">
+<div className="flex flex-col size-full justify-center">
+<Container>
+<div className="w-full flex flex-col gap-y-4">
 
-This interactive web experience allows users to engage with live data streams, providing real-time insights into key metrics. The dashboard offers customizable visualizations such as graphs, heatmaps, and gauges, which update dynamically as new data comes in.
+# FBI Safe Online Surfing
 
-Users can filter the data by various parameters, zoom into specific time ranges, and compare historical trends. Built with React and WebSockets, the platform ensures a seamless experience, keeping users informed of changes the moment they happen.
+</div>
+
+</Container>
+</div>
+</div>
