--- a/src/content/projects/qgiv.mdx
+++ b/src/content/projects/qgiv.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Robin Knows"
-slug: robin-knows
-scene: robin-knows-scene
+title: "Qgiv"
+slug: qgiv
+scene: qgiv-scene
 published: true
 ---
 
@@ -10,7 +10,7 @@ published: true
 <Container>
 <div className="w-full flex flex-col gap-y-4">
 
-# Robin Knows
+# Qgiv
 
 </div>
 
