--- a/src/content/projects/rodda-construction.mdx
+++ b/src/content/projects/rodda-construction.mdx
@@ -1,12 +1,19 @@
 ---
-title: "3D Virtual Art Gallery"
+title: "Rodda Construction"
 slug: rodda-construction
 scene: rodda-construction-scene
 published: true
 ---
 
-# 3D Virtual Art Gallery
+<div className="relative size-full -mt-header">
+<div className="flex flex-col size-full justify-center">
+<Container>
+<div className="w-full flex flex-col gap-y-4">
 
-This interactive 3D web experience invites users to explore a virtual art gallery featuring works from emerging and renowned artists. Using WebGL and Three.js, the platform creates a fully immersive space where users can "walk" through the gallery, zoom in on individual pieces, and read information about the artist and the work itself.
+# Rodda Construction
 
-Users can interact with art installations in a way that mimics the real-world gallery experience, complete with customizable lighting and audio effects. The platform also supports virtual exhibitions, where artists can host live walkthroughs of their collections.
+</div>
+
+</Container>
+</div>
+</div>
