--- a/src/content/projects/triptych-co.mdx
+++ b/src/content/projects/triptych-co.mdx
@@ -1,12 +1,19 @@
 ---
-title: "Collaborative Storytelling Platform"
+title: "Triptych, Co"
 slug: triptych-co
 scene: triptych-co-scene
 published: true
 ---
 
-# Collaborative Storytelling Platform
+<div className="relative size-full -mt-header">
+<div className="flex flex-col size-full justify-center">
+<Container>
+<div className="w-full flex flex-col gap-y-4">
 
-This project is an interactive platform designed for writers and storytellers to collaborate on stories in real-time. Multiple users can contribute to a single story, adding new chapters, editing existing text, and discussing plot points with the community. The platform highlights each user's contributions and enables real-time edits and suggestions.
+# Triptych, Co
 
-Powered by React and Firebase, the storytelling platform ensures seamless collaboration, allowing users to build narratives together from anywhere in the world. Customizable templates and AI-powered writing suggestions enhance the experience, helping creators bring their stories to life.
+</div>
+
+</Container>
+</div>
+</div>
