--- a/src/content/projects/meta-your-personal-mainstreet.mdx
+++ b/src/content/projects/meta-your-personal-mainstreet.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Robin Knows"
-slug: robin-knows
-scene: robin-knows-scene
+title: "Meta: Your Personal Mainstreet"
+slug: meta-your-personal-mainstreet
+scene: meta-your-personal-mainstreet-scene
 published: true
 ---
 
@@ -10,7 +10,7 @@ published: true
 <Container>
 <div className="w-full flex flex-col gap-y-4">
 
-# Robin Knows
+# Meta: Your Personal Mainstreet
 
 </div>
 
