--- a/src/content/projects/lloyd-goldstein.mdx
+++ b/src/content/projects/lloyd-goldstein.mdx
@@ -8,11 +8,25 @@ published: true
 <div className="relative size-full -mt-header">
 <div className="flex flex-col size-full justify-center">
 <Container>
-<div className="w-full flex flex-col gap-y-4">
+# Project: Lloyd Goldstein
 
-# Lloyd Goldstein
+---
 
-</div>
+### Summary
+
+Lowry Creative designed and developed a website for Lloyd Goldstein, a musician in residence at Moffitt Cancer Center in Tampa, FL. The site features a dedicated blog and an extensive portfolio to highlight Goldstein's rich history of work. The project aimed to provide a comprehensive platform for showcasing his musical achievements and sharing insights through his blog.
+
+### My Role
+
+As the sole front-end developer on this project, I leveraged Squarespace's Developer mode to create a custom template that included features like full-screen video backgrounds, which were not supported by standard Squarespace templates at the time.
+
+### Tech Stack
+
+Squarespace, jQuery, ES6, LESS, webpack
+
+### Links
+
+[https://www.lloydgoldstein.com/](https://www.lloydgoldstein.com/)
 
 </Container>
 </div>
