--- a/src/content/projects/meta-your-personal-mainstreet.mdx
+++ b/src/content/projects/meta-your-personal-mainstreet.mdx
@@ -12,6 +12,22 @@ published: true
 
 # Meta: Your Personal Mainstreet
 
+### Summary
+
+Triptych's Meta Main Street project, sponsored by The Atlantic, explored the intersection of virtual reality and commerce, reimagining the traditional shopping experience by blending an immersive digital environment with retail. The project creates a new, interactive way for brands and consumers to connect in a virtual space. Meta Main Street offers small businesses digital storefronts that replicate the communal aspects of in-person shopping, offering a seamless, innovative approach to e-commerce in the metaverse.
+
+### My Role
+
+As a front-end developer on the Meta Main Street project, I was responsible for enhancing the frontend infrastructure, particularly working with Vue.js to ensure it was optimized for the entire development team’s use. My role also involved crafting custom SVG animations and debugging/improving a complex Three.js scene. Through these efforts, I helped deliver a seamless and visually engaging user experience that satisfied The Atlantic’s goals for the project.
+
+### Tech Stack
+
+Javascript, Vue, Three.js, Sass
+
+### Links
+
+[Your Own Personal Marketplace](https://www.theatlantic.com/sponsored/facebook-spa-2021/your-own-personal-main-street/3694/)
+
 </div>
 
 </Container>
