--- a/src/content/projects/qgiv.mdx
+++ b/src/content/projects/qgiv.mdx
@@ -12,6 +12,23 @@ published: true
 
 # Qgiv
 
+### Summary
+
+Qgiv redesigned their donation forms to meet evolving UI/UX standards, offer an improved user experience, and increase conversion rates.. The redesigned forms feature enhanced customization options, a mobile-first responsive design, and built-in tools that simplify the donation process for users. These updates not only streamline giving but also provide nonprofits with valuable insights and flexibility to create a more personalized donor experience.
+
+### My Role
+
+As the Technical Lead on Qgiv’s donation forms redesign project, I spearheaded the frontend rebuild using React, starting from scratch. I collaborated closely with backend developers to design and implement RESTful APIs that seamlessly integrated with the new frontend. Additionally, I worked with the DevOps team to incorporate a streamlined frontend build process into the existing CI/CD pipeline. I also designed and built a reusable library of React components, which enhanced consistency across all frontend projects. My responsibilities extended to conducting thorough code reviews and managing pull requests to maintain high standards of code quality and uniformity.
+
+### Tech Stack
+
+React, Redux, webpack, Sass, PHP
+
+### Links
+
+[https://www.qgiv.com/donation-forms](https://www.qgiv.com/donation-forms)  
+[https://www.qgiv.com/blog/qgivs-redesigned-donation-forms-win-big-innovation-award/](https://www.qgiv.com/blog/qgivs-redesigned-donation-forms-win-big-innovation-award/)
+
 </div>
 
 </Container>
