--- a/src/content/projects/rodda-construction.mdx
+++ b/src/content/projects/rodda-construction.mdx
@@ -12,6 +12,22 @@ published: true
 
 # Rodda Construction
 
+### Summary
+
+Lowry Creative undertook the redesign of Rodda Construction's website to better showcase the company’s portfolio of building projects and provide a centralized feed for press releases and news articles. The project involved creating a custom design that avoided pre-built templates, ensuring a unique and tailored appearance.
+
+### My Role
+
+For the redesign of Rodda Construction's website, I utilized Squarespace's developer mode to bypass the limitations of default CMS blocks. Building custom sliders, content sections, and feeds, I achieved a highly tailored design that aligned with the Art Director's vision. This approach allowed me to deliver a website that exceeded the client's expectations in terms of both functionality and aesthetics.
+
+### Tech Stack
+
+Squarespace, jQuery, ES6, LESS, webpack
+
+### Links
+
+[https://www.roddaconstruction.com/](https://www.roddaconstruction.com/)
+
 </div>
 
 </Container>
