--- a/src/content/projects/triptych-co.mdx
+++ b/src/content/projects/triptych-co.mdx
@@ -12,6 +12,23 @@ published: true
 
 # Triptych, Co
 
+### Summary
+
+Triptych recently completed a project to rebuild the company’s website using a modern tech stack. This effort resulted in a highly interactive site with dynamic 3D animations enhancing user interaction. The redesigned website was recognized as a Muzli Pick, acknowledging its outstanding contribution to the design community and underscoring Triptych's dedication to innovative web design.
+
+### My Role
+
+As the lead front-end engineer on this project, I was able to use a combination of Three.js, GLSL, React.js, and Webflow to deliver a final product that met the needs of all project stakeholders. By integrating Three.js and GLSL, I was able to create interactive 3D shaders and animations, bringing a dynamic, visually engaging experience to the site. React.js was used for building modular, reusable components, ensuring smooth interaction and performance. The challenge of deploying this setup on Webflow was met by leveraging custom code integrations, resulting in a unique, highly interactive web experience that maintained the flexibility of the Webflow CMS.
+
+### Tech Stack
+
+Webflow, Typescript, React, Next.js, CSS, AWS S3, Github Actions
+
+### Links
+
+[https://www.triptych.co/](https://www.triptych.co/)  
+[https://muz.li/picked/triptych-engaging-interactive-experiences](https://muz.li/picked/triptych-engaging-interactive-experiences)
+
 </div>
 
 </Container>
