Setup project for use with tailwind typography

--- a/src/content/pages/about/index.mdx
+++ b/src/content/pages/about/index.mdx
@@ -4,11 +4,11 @@ slug: about
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
+<Container className="prose">
 
-About
+# About
 
 </Container>
 </div>
