--- a/src/content/projects/lloyd-goldstein.mdx
+++ b/src/content/projects/lloyd-goldstein.mdx
@@ -5,9 +5,9 @@ scene: lloyd-goldstein-scene
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
+<Container className="prose">
 # Project: Lloyd Goldstein
 
 ---
