--- a/src/content/projects/meta-your-personal-mainstreet.mdx
+++ b/src/content/projects/meta-your-personal-mainstreet.mdx
@@ -5,11 +5,9 @@ scene: meta-your-personal-mainstreet-scene
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
-<div className="w-full flex flex-col gap-y-4">
-
+<Container className="prose">
 # Meta: Your Personal Mainstreet
 
 ### Summary
@@ -27,8 +25,6 @@ Javascript, Vue, Three.js, Sass
 ### Links
 
 [Your Own Personal Marketplace](https://www.theatlantic.com/sponsored/facebook-spa-2021/your-own-personal-main-street/3694/)
-
-</div>
 
 </Container>
 </div>
