--- a/src/content/projects/qgiv.mdx
+++ b/src/content/projects/qgiv.mdx
@@ -5,11 +5,9 @@ scene: qgiv-scene
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
-<div className="w-full flex flex-col gap-y-4">
-
+<Container className="prose">
 # Qgiv
 
 ### Summary
@@ -18,7 +16,7 @@ Qgiv redesigned their donation forms to meet evolving UI/UX standards, offer an 
 
 ### My Role
 
-As the Technical Lead on Qgiv’s donation forms redesign project, I spearheaded the frontend rebuild using React, starting from scratch. I collaborated closely with backend developers to design and implement RESTful APIs that seamlessly integrated with the new frontend. Additionally, I worked with the DevOps team to incorporate a streamlined frontend build process into the existing CI/CD pipeline. I also designed and built a reusable library of React components, which enhanced consistency across all frontend projects. My responsibilities extended to conducting thorough code reviews and managing pull requests to maintain high standards of code quality and uniformity.
+As the Technical Lead on Qgiv's donation forms redesign project, I spearheaded the frontend rebuild using React, starting from scratch. I collaborated closely with backend developers to design and implement RESTful APIs that seamlessly integrated with the new frontend. Additionally, I worked with the DevOps team to incorporate a streamlined frontend build process into the existing CI/CD pipeline. I also designed and built a reusable library of React components, which enhanced consistency across all frontend projects. My responsibilities extended to conducting thorough code reviews and managing pull requests to maintain high standards of code quality and uniformity.
 
 ### Tech Stack
 
@@ -28,8 +26,6 @@ React, Redux, webpack, Sass, PHP
 
 [https://www.qgiv.com/donation-forms](https://www.qgiv.com/donation-forms)  
 [https://www.qgiv.com/blog/qgivs-redesigned-donation-forms-win-big-innovation-award/](https://www.qgiv.com/blog/qgivs-redesigned-donation-forms-win-big-innovation-award/)
-
-</div>
 
 </Container>
 </div>
