--- a/src/content/projects/robin-knows.mdx
+++ b/src/content/projects/robin-knows.mdx
@@ -5,10 +5,9 @@ scene: robin-knows-scene
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
-<div className="w-full flex flex-col gap-y-4">
+<Container className="prose">
 
 # Robin Knows
 
@@ -27,8 +26,6 @@ Typescript, React Native, Expo, Websockets, Tailwind/Nativewind, Nestjs, Eslint
 ### Links
 
 [https://www.robinknows.app/](https://www.robinknows.app/)
-
-</div>
 
 </Container>
 </div>
