--- a/src/content/projects/rodda-construction.mdx
+++ b/src/content/projects/rodda-construction.mdx
@@ -5,10 +5,9 @@ scene: rodda-construction-scene
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
-<div className="w-full flex flex-col gap-y-4">
+<Container className="prose">
 
 # Rodda Construction
 
@@ -27,8 +26,6 @@ Squarespace, jQuery, ES6, LESS, webpack
 ### Links
 
 [https://www.roddaconstruction.com/](https://www.roddaconstruction.com/)
-
-</div>
 
 </Container>
 </div>
