--- a/src/content/projects/triptych-co.mdx
+++ b/src/content/projects/triptych-co.mdx
@@ -5,10 +5,9 @@ scene: triptych-co-scene
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
-<div className="w-full flex flex-col gap-y-4">
+<Container className="prose">
 
 # Triptych, Co
 
@@ -28,8 +27,6 @@ Webflow, Typescript, React, Next.js, CSS, AWS S3, Github Actions
 
 [https://www.triptych.co/](https://www.triptych.co/)  
 [https://muz.li/picked/triptych-engaging-interactive-experiences](https://muz.li/picked/triptych-engaging-interactive-experiences)
-
-</div>
 
 </Container>
 </div>
