--- a/src/content/projects/wind-river.mdx
+++ b/src/content/projects/wind-river.mdx
@@ -5,10 +5,9 @@ scene: wind-river-scene
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
-<div className="w-full flex flex-col gap-y-4">
+<Container className="prose">
 
 # Wind River
 
@@ -37,8 +36,6 @@ Webflow, React, React Three Fiber, PixiJs, Three.js, Sass, Vite, AWS S3, AWS Rou
 ### Links
 
 [https://www.windriverbuilt.com/experience/map](https://www.windriverbuilt.com/experience/map)
-
-</div>
 
 </Container>
 </div>
