--- a/src/content/pages/home/index.mdx
+++ b/src/content/pages/home/index.mdx
@@ -5,10 +5,9 @@ scene: logo-scene
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
-<div className="w-full flex flex-col gap-y-4">
+<Container className="prose">
 
 # Hello there!
 
@@ -16,9 +15,7 @@ Glad you dropped by!
 
 I'm Mario, a Creative Developer with a passion for crafting exceptional user experiences.
 
-If you have sec, check out <OpenMenuButton><span className="underline">my projects</span></OpenMenuButton>. Like what you see? Drop me a line!
-
-</div>
+If you have sec, check out <OpenMenuButton><span className="link">my projects</span></OpenMenuButton>. Like what you see? Drop me a line!
 
 </Container>
 </div>
