--- a/src/content/projects/fbi-safe-online-surfing.mdx
+++ b/src/content/projects/fbi-safe-online-surfing.mdx
@@ -5,11 +5,9 @@ scene: fbi-safe-online-surfing-scene
 published: true
 ---
 
-<div className="relative size-full -mt-header">
+<div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container>
-<div className="w-full flex flex-col gap-y-4">
-
+<Container className="prose">
 # FBI Safe Online Surfing
 
 ### Summary
@@ -27,8 +25,6 @@ React, Next.js, Three.js, React Three Fiber, Zustand, Sass
 ### Links
 
 [https://sos.fbi.gov/en/](https://sos.fbi.gov/en/)
-
-</div>
 
 </Container>
 </div>
