--- a/src/content/projects/fbi-safe-online-surfing.mdx
+++ b/src/content/projects/fbi-safe-online-surfing.mdx
@@ -7,7 +7,7 @@ published: true
 
 <div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container className="prose">
+<Container className="prose prose-white">
 # FBI Safe Online Surfing
 
 ### Summary
