Setup project to inherit prose from Container component

--- a/src/content/pages/home/index.mdx
+++ b/src/content/pages/home/index.mdx
@@ -7,11 +7,11 @@ published: true
 
 <div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container className="prose prose-sm sm:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl prose-white">
+<Container>
 
-# Hello there!
+# Hello there
 
-Glad you dropped by!
+Thanks for dropping by!
 
 I'm Mario, a Creative Developer with a passion for crafting exceptional user experiences.
 
