--- a/src/content/projects/meta-your-personal-mainstreet.mdx
+++ b/src/content/projects/meta-your-personal-mainstreet.mdx
@@ -7,7 +7,7 @@ published: true
 
 <div className="relative size-full pt-header">
 <div className="flex flex-col size-full justify-center">
-<Container className="prose prose-sm sm:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl prose-white">
+<Container>
 # Meta: Your Personal Mainstreet
 
 ### Summary
