Update home content

--- a/src/content/pages/home/index.mdx
+++ b/src/content/pages/home/index.mdx
@@ -5,8 +5,7 @@ scene: logo-scene
 published: true
 ---
 
-<div className="relative size-full pt-header">
-<div className="flex flex-col size-full justify-center">
+<div className="relative flex flex-col size-full justify-center min-h-[calc(100vh-var(--header-height))]">
 <Container>
 
 # Hello there
@@ -18,5 +17,4 @@ I'm Mario, a Creative Developer with a passion for crafting exceptional user exp
 If you have sec, check out <OpenMenuButton><span className="link">my projects</span></OpenMenuButton>. Like what you see? Drop me a line!
 
 </Container>
-</div>
 </div>
