Tweak hero section height

--- a/src/content/projects/fbi-safe-online-surfing.mdx
+++ b/src/content/projects/fbi-safe-online-surfing.mdx
@@ -5,9 +5,8 @@ scene: fbi-safe-online-surfing-scene
 published: true
 ---
 
-<div className="relative size-full h-fit pt-header pb-16">
 <div className="flex flex-col w-full h-fit gap-y-16">
-<div className="flex flex-col w-full h-[75dvh] justify-center">
+<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
 # FBI Safe Online Surfing
 ---
@@ -27,5 +26,4 @@ For this project I built a modular React component system that could be reused t
 [https://sos.fbi.gov/en/](https://sos.fbi.gov/en/)
 
 </Container>
-</div>
 </div>
