Update content globally to conform to same layout

--- a/src/content/projects/lloyd-goldstein.mdx
+++ b/src/content/projects/lloyd-goldstein.mdx
@@ -5,12 +5,21 @@ scene: lloyd-goldstein-scene
 published: true
 ---
 
-<div className="relative size-full pt-header">
-<div className="flex flex-col size-full justify-center">
+<div className="flex flex-col w-full h-fit gap-y-16">
+<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
+
 # Project: Lloyd Goldstein
 
 ---
+
+### Tech Stack
+
+Squarespace, jQuery, ES6, LESS, webpack
+
+</Container>
+</div>
+<Container>
 
 ### Summary
 
@@ -20,14 +29,9 @@ Lowry Creative designed and developed a website for Lloyd Goldstein, a musician 
 
 As the sole front-end developer on this project, I leveraged Squarespace's Developer mode to create a custom template that included features like full-screen video backgrounds, which were not supported by standard Squarespace templates at the time.
 
-### Tech Stack
-
-Squarespace, jQuery, ES6, LESS, webpack
-
 ### Links
 
 [https://www.lloydgoldstein.com/](https://www.lloydgoldstein.com/)
 
 </Container>
-</div>
 </div>
