--- a/src/content/projects/meta-your-personal-mainstreet.mdx
+++ b/src/content/projects/meta-your-personal-mainstreet.mdx
@@ -5,10 +5,21 @@ scene: meta-your-personal-mainstreet-scene
 published: true
 ---
 
-<div className="relative size-full pt-header">
-<div className="flex flex-col size-full justify-center">
+<div className="flex flex-col w-full h-fit gap-y-16">
+<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
+
 # Meta: Your Personal Mainstreet
+
+---
+
+### Tech Stack
+
+Javascript, Vue, Three.js, Sass
+
+</Container>
+</div>
+<Container>
 
 ### Summary
 
@@ -18,14 +29,9 @@ Triptych's Meta Main Street project, sponsored by The Atlantic, explored the int
 
 As a front-end developer on the Meta Main Street project, I was responsible for enhancing the frontend infrastructure, particularly working with Vue.js to ensure it was optimized for the entire development team’s use. My role also involved crafting custom SVG animations and debugging/improving a complex Three.js scene. Through these efforts, I helped deliver a seamless and visually engaging user experience that satisfied The Atlantic’s goals for the project.
 
-### Tech Stack
-
-Javascript, Vue, Three.js, Sass
-
 ### Links
 
-[Your Own Personal Marketplace](https://www.theatlantic.com/sponsored/facebook-spa-2021/your-own-personal-main-street/3694/)
+[Live Project](https://www.theatlantic.com/sponsored/facebook-spa-2021/your-own-personal-main-street/3694/)
 
 </Container>
-</div>
 </div>
