--- a/src/content/projects/rodda-construction.mdx
+++ b/src/content/projects/rodda-construction.mdx
@@ -5,11 +5,21 @@ scene: rodda-construction-scene
 published: true
 ---
 
-<div className="relative size-full pt-header">
-<div className="flex flex-col size-full justify-center">
+<div className="flex flex-col w-full h-fit gap-y-16">
+<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
 
 # Rodda Construction
+
+---
+
+### Tech Stack
+
+Squarespace, jQuery, ES6, LESS, webpack
+
+</Container>
+</div>
+<Container>
 
 ### Summary
 
@@ -19,14 +29,9 @@ Lowry Creative undertook the redesign of Rodda Construction's website to better 
 
 For the redesign of Rodda Construction's website, I utilized Squarespace's developer mode to bypass the limitations of default CMS blocks. Building custom sliders, content sections, and feeds, I achieved a highly tailored design that aligned with the Art Director's vision. This approach allowed me to deliver a website that exceeded the client's expectations in terms of both functionality and aesthetics.
 
-### Tech Stack
-
-Squarespace, jQuery, ES6, LESS, webpack
-
 ### Links
 
 [https://www.roddaconstruction.com/](https://www.roddaconstruction.com/)
 
 </Container>
-</div>
 </div>
