--- a/src/content/projects/qgiv.mdx
+++ b/src/content/projects/qgiv.mdx
@@ -5,10 +5,21 @@ scene: qgiv-scene
 published: true
 ---
 
-<div className="relative size-full pt-header">
-<div className="flex flex-col size-full justify-center">
+<div className="flex flex-col w-full h-fit gap-y-16">
+<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
+
 # Qgiv
+
+---
+
+### Tech Stack
+
+React, Redux, webpack, Sass, PHP
+
+</Container>
+</div>
+<Container>
 
 ### Summary
 
@@ -18,15 +29,10 @@ Qgiv redesigned their donation forms to meet evolving UI/UX standards, offer an 
 
 As the Technical Lead on Qgiv's donation forms redesign project, I spearheaded the frontend rebuild using React, starting from scratch. I collaborated closely with backend developers to design and implement RESTful APIs that seamlessly integrated with the new frontend. Additionally, I worked with the DevOps team to incorporate a streamlined frontend build process into the existing CI/CD pipeline. I also designed and built a reusable library of React components, which enhanced consistency across all frontend projects. My responsibilities extended to conducting thorough code reviews and managing pull requests to maintain high standards of code quality and uniformity.
 
-### Tech Stack
-
-React, Redux, webpack, Sass, PHP
-
 ### Links
 
 [https://www.qgiv.com/donation-forms](https://www.qgiv.com/donation-forms)  
 [https://www.qgiv.com/blog/qgivs-redesigned-donation-forms-win-big-innovation-award/](https://www.qgiv.com/blog/qgivs-redesigned-donation-forms-win-big-innovation-award/)
 
 </Container>
-</div>
 </div>
