--- a/src/content/projects/robin-knows.mdx
+++ b/src/content/projects/robin-knows.mdx
@@ -5,11 +5,21 @@ scene: robin-knows-scene
 published: true
 ---
 
-<div className="relative size-full pt-header">
-<div className="flex flex-col size-full justify-center">
+<div className="flex flex-col w-full h-fit gap-y-16">
+<div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
 
 # Robin Knows
+
+---
+
+### Tech Stack
+
+Typescript, React Native, Expo, Websockets, Tailwind/Nativewind, Nestjs, Eslint
+
+</Container>
+</div>
+<Container>
 
 ### Summary
 
@@ -19,14 +29,9 @@ Triptych developed Robin Knows, an AI-powered app designed to offer on-demand te
 
 My role was to architect a React Native component system, and state management methodology that could scale as the scope of the app grows over time. This system was designed to help our team quickly build out screens that would automatically conform to the app’s visual design system. I performed code reviews and code audits to ensure that all front-end react native code conformed to a highly opinionated set of eslint rules. I collaborated with backend devs to create a swagger api endpoint, which I used to codegen a schema of Typescript types and interfaces for consumption by the front-end app. This ensured that the front-end’s handling of data structures conformed to backend models at all times.Furthermore, I refactored the chat interface of the app, utilizing a websocket stored in a React Context. This websocket instance was leveraged to listen for server updates and automatically refetch the latest messages to be displayed on the front-end.
 
-### Tech Stack
-
-Typescript, React Native, Expo, Websockets, Tailwind/Nativewind, Nestjs, Eslint
-
 ### Links
 
 [https://www.robinknows.app/](https://www.robinknows.app/)
 
 </Container>
-</div>
 </div>
