--- a/src/content/projects/meta-your-personal-main-street.mdx
+++ b/src/content/projects/meta-your-personal-main-street.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Meta: Your Personal Mainstreet"
-slug: meta-your-personal-mainstreet
-scene: meta-your-personal-mainstreet-scene
+title: "Meta: Your Personal Main Street"
+slug: meta-your-personal-main-street
+scene: meta-your-personal-main-street-scene
 published: true
 ---
 
@@ -9,7 +9,7 @@ published: true
 <div className="flex flex-col w-full min-h-[calc(75vh-var(--header-height))] justify-center">
 <Container>
 
-# Meta: Your Personal Mainstreet
+# Meta: Your Personal Main Street
 
 ---
 
@@ -27,7 +27,7 @@ Triptych's Meta Main Street project, sponsored by The Atlantic, explored the int
 
 ### My Role
 
-As a front-end developer on the Meta Main Street project, I was responsible for enhancing the frontend infrastructure, particularly working with Vue.js to ensure it was optimized for the entire development team’s use. My role also involved crafting custom SVG animations and debugging/improving a complex Three.js scene. Through these efforts, I helped deliver a seamless and visually engaging user experience that satisfied The Atlantic’s goals for the project.
+As a front-end developer on the Meta Main Street project, I was responsible for enhancing the frontend infrastructure, particularly working with Vue.js to ensure it was optimized for the entire development team's use. My role also involved crafting custom SVG animations and debugging/improving a complex Three.js scene. Through these efforts, I helped deliver a seamless and visually engaging user experience that satisfied The Atlantic’s goals for the project.
 
 ### Links
 
